Add settings vertical slice
